Start of the project :)

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,31 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+  /* container */
+  --container-width-lg: 2460px;
+  --container-padding-lg: 40px;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  --container-width-md: 1024px;
+  --container-padding-md: 24px;
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+  --container-width-sm: 768px;
+  --container-padding-sm: 16px;
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --container-width-xs: 480px;
+  --container-padding-xs: 12px;
+
+  /* colors */
+  --color-black-800: #131313;
+  --color-white-800: #f5f5f5;
+
+  --color-gray-800: #282828;
+  --color-gray-600: #4d4d4d;
+  --color-gray-400: #787878;
+  --color-gray-200: #bbbbbb;
+
+  /* rounded */
+  --rounded-lg: 24px;
+  --rounded-md: 16px;
+  --rounded-sm: 14px;
+  --rounded-xs: 8px;
 }
 
 * {
@@ -35,8 +39,36 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+li {
+  list-style: none;
+}
+
+body {
+  background-color: var(--color-black-800);
+}
+
+.container {
+  max-width: var(--container-width-lg);
+  padding: 0 var(--container-padding-lg);
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    max-width: var(--container-width-md);
+    padding: 0 var(--container-padding-md);
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .container {
+    max-width: var(--container-width-sm);
+    padding: 0 var(--container-padding-sm);
+  }
+}
+
+@media only screen and (max-width: 479px) {
+  .container {
+    max-width: var(--container-width-xs);
+    padding: 0 var(--container-padding-xs);
   }
 }
