Layout + start of intro section...

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,11 +21,19 @@
   --color-gray-400: #787878;
   --color-gray-200: #bbbbbb;
 
+  --color-yellow-600: #ffb800;
+
+  --color-green-800: #36d000;
+  --color-green-600: #68a106;
+
+  --color-red-800: #cc0000;
+
   /* rounded */
   --rounded-lg: 24px;
   --rounded-md: 16px;
   --rounded-sm: 14px;
   --rounded-xs: 8px;
+  --rounded-xxs: 4px;
 }
 
 * {
@@ -50,6 +58,48 @@ body {
 .container {
   max-width: var(--container-width-lg);
   padding: 0 var(--container-padding-lg);
+}
+
+/* Intro slider buttons */
+.navigation-button {
+  cursor: pointer;
+  position: absolute;
+  z-index: 9;
+  top: 45%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 0.5px solid
+    color-mix(in srgb, var(--color-black-800) 38%, transparent);
+  background: linear-gradient(
+    48deg,
+    rgba(152, 152, 152, 0.65) 14.45%,
+    rgba(141, 141, 141, 0.5) 86.8%
+  );
+}
+
+.preview-button {
+  right: 19px;
+}
+
+.next-button {
+  left: 19px;
+  rotate: 180deg;
+}
+
+.swiper .swiper-pagination-bullet {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 2px solid var(--color-gray-400);
+}
+
+.swiper .swiper-pagination-bullet-active {
+  background-color: var(--color-gray-400);
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
