--- a/components/ui/SoonText.module.css
+++ b/components/ui/SoonText.module.css
@@ -18,7 +18,7 @@
 }
 
 .centered {
-  bottom: 40%;
+  bottom: 30%;
   width: 100px;
   height: 40px;
   border-radius: var(--rounded-xs);
@@ -28,6 +28,21 @@
   .soon {
     width: 40px;
     height: 16px;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .centered {
+    width: 64px;
+    height: 24px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .centered {
+    width: 48px;
+    height: 18px;
     font-size: 12px;
   }
 }
