--- a/app/home/components/TeachingModels.module.css
+++ b/app/home/components/TeachingModels.module.css
@@ -143,6 +143,14 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .wrapper {
+    margin-top: 54px;
+  }
+
+  .wrapper h2 {
+    margin-bottom: 24px;
+  }
+
   .centeredText,
   .bottomText {
     font-size: 18px;
