--- a/components/layout/MobileMenu.module.css
+++ b/components/layout/MobileMenu.module.css
@@ -6,9 +6,9 @@
   right: 0;
   overflow-y: auto;
   padding: 10px 10px 18px 10px;
-  backdrop-filter: blur(16px);
   border-radius: var(--rounded-xs);
-  background-color: color-mix(in srgb, var(--color-gray-600) 95%, transparent);
+  background-color: color-mix(in srgb, var(--color-gray-600) 98%, transparent);
+  backdrop-filter: blur(16px);
 }
 
 .open {
@@ -27,6 +27,9 @@
 
 .top {
   margin-bottom: 27px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .icon {
