--- a/components/layout/MobileNav.module.css
+++ b/components/layout/MobileNav.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  z-index: 997;
+  z-index: 996;
   position: fixed;
   bottom: 10px;
   right: 0;
@@ -10,18 +10,19 @@
   max-width: 520px;
   border-radius: var(--rounded-md);
   border: 1px solid color-mix(in srgb, var(--color-gray-400) 25%, transparent);
-  backdrop-filter: blur(14px);
+  backdrop-filter: blur(18px);
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.78);
-  background: linear-gradient(
-      0deg,
-      var(--color-gray-600) 0%,
-      var(--color-gray-600) 100%
-    ),
-    var(--color-black-800);
+  background-color: color-mix(in srgb, var(--color-gray-600) 80%, transparent);
 }
 
 @media only screen and (min-width: 1025px) {
   .wrapper {
     display: none;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .wrapper {
+    max-width: 100%;
   }
 }
