--- a/components/ui/FeaturesList.module.css
+++ b/components/ui/FeaturesList.module.css
@@ -42,6 +42,12 @@
 }
 
 /* features styles in tablet and mobile */
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .list {
+    justify-content: space-around;
+  }
+}
+
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
   .list li a {
     gap: 6px;
