--- a/app/globals.css
+++ b/app/globals.css
@@ -115,9 +115,18 @@ body {
   transition-timing-function: linear !important;
 }
 
-.css-w76bbz-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input.css-w76bbz-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input.css-w76bbz-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input {
-  padding-right: 0 !important;
+@media only screen and (min-width: 1025px) {
+  [class*="MuiSelect-select"][class*="MuiOutlinedInput-input"] {
+    padding-right: 16px !important;
+  }
 }
+
+@media only screen and (max-width: 1024px) {
+  [class*="MuiSelect-select"][class*="MuiOutlinedInput-input"] {
+    padding-right: 0 !important;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .container {
     max-width: var(--container-width-md);
