--- a/components/ui/LanguageBox.module.css
+++ b/components/ui/LanguageBox.module.css
@@ -12,6 +12,7 @@
   width: 87%;
   display: flex;
   gap: 16px;
+  align-items: center;
   font-size: 18px;
   border-left: 1px solid var(--color-gray-400);
 }
@@ -47,4 +48,14 @@
   font-size: 14px;
   border-left: none;
   gap: 3px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .selected {
+    padding-right: 16px;
+  }
+
+  .smallSelected {
+    padding-right: 0;
+  }
 }
