--- a/app/home/components/Intro.module.css
+++ b/app/home/components/Intro.module.css
@@ -38,17 +38,31 @@
 
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   .intro {
-    height: 360px;
+    height: 320px;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  .intro {
-    height: 540px;
-  }
-
   .slide > div {
     left: 17px;
     bottom: 43px;
+  }
+}
+
+@media only screen and (min-width: 541px) and (max-width: 768px) {
+  .intro {
+    height: 620px;
+  }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 540px) {
+  .intro {
+    height: 500px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .intro {
+    height: 480px;
   }
 }
