--- a/components/layout/MobileMenu.module.css
+++ b/components/layout/MobileMenu.module.css
@@ -67,3 +67,9 @@
   align-items: center;
   gap: 28px;
 }
+
+@media only screen and (max-width: 768px) {
+  .main h2 {
+    font-size: 22px;
+  }
+}
