--- a/components/layout/MobileMenu.module.css
+++ b/components/layout/MobileMenu.module.css
@@ -6,9 +6,10 @@
   right: 0;
   overflow-y: auto;
   padding: 10px 10px 18px 10px;
-  border-radius: var(--rounded-xs);
-  background-color: color-mix(in srgb, var(--color-gray-600) 98%, transparent);
   backdrop-filter: blur(16px);
+  border-radius: var(--rounded-xs);
+  box-shadow: 0px 0px 20px var(--color-black-800);
+  background-color: color-mix(in srgb, var(--color-gray-600) 98%, transparent);
 }
 
 .open {
@@ -70,6 +71,7 @@
 
 @media only screen and (max-width: 768px) {
   .main h2 {
-    font-size: 22px;
+    font-size: 20px;
+    width: 94px;
   }
 }
